name:                hlinode
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            Haskell bindings to the Linode API
description:         Haskell bindings to the Linode API
category:            Network
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

library
  build-depends:       base == 4.*,
                       aeson == 0.4.*,
                       attoparsec == 0.8.*,
                       bytestring == 0.9.*,
                       http-enumerator == 0.7.*,
                       text == 0.11.*
  exposed-modules:     Network.Linode
  ghc-options:         -Wall

executable hlinode
  hs-source-dirs:      bin
  main-is:             hlinode.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       directory == 1.1.*,
                       hlinode
  ghc-options:         -Wall
